--- a/outreach/ibpe.html
+++ b/outreach/ibpe.html
@@ -68,20 +68,30 @@
         </nav>
       </div>
 
-      <!-- Leadership -->
+      <!-- Main -->
       <div class="wrapper style1">
-        <section class="container special">
-          <header>
-            <h3>Innovative Base of Physics Experiments (IBPE), HUST</h3>
-          </header>
-          <p>
-            During May 2019 - July 2020, I was the
-            <strong>chairperson</strong> of IBPE. I was the first female leader
-            of the platform since its establishment in 2002.
-          </p>
-          <div class="row">
-            <article class="col-8 col-12-mobile special">
-              <h4>Feymann reading group</h4>
+        <div class="container">
+          <article id="main" class="special">
+            <header>
+              <h2>
+                <a href="#"
+                  >Innovative Base of Physics Experiments (IBPE), HUST</a
+                >
+              </h2>
+              <p>Morbi convallis lectus malesuada sed fermentum dolore amet</p>
+            </header>
+            <a href="#" class="image featured"
+              ><img src="/images/pic06.jpg" alt=""
+            /></a>
+            <p>
+              During May 2019 - July 2020, I was the
+              <strong>chairperson</strong> of IBPE. I was the first female
+              leader of the platform since its establishment in 2002.
+            </p>
+            <section>
+              <header>
+                <h3>Feymann reading group</h3>
+              </header>
               <p>
                 In collaboration with my team, I organized and led reading group
                 activities to help first-year students adapt to university-level
@@ -98,99 +108,27 @@
                 physics concepts but also fostered a cooperative and engaging
                 atmosphere within the department.
               </p>
-              <div class="row gtr-50">
-                <div class="col-4">
-                  <a href="/images/IRL V1N1 cover.png" class="image fit">
-                    <img src="/images/IRL V1N1 cover.png" alt="" />
-                  </a>
-                </div>
-                <div class="col-8">
-                  <h4>Chief editor of IRL (2020)</h4>
-                  <p>
-                    This is the inaugural issue of
-                    <strong>IBPE Review Letters (IRL)</strong>, a journal my
-                    teammates and I established to preserve and share the
-                    intellectual output of IBPE members. While IBPE is known for
-                    its numerous reading and exploratory activities, many
-                    brilliant outcomes from past projects were unfortunately
-                    left undocumented, leading to the loss of valuable insights
-                    over time. To address this, we created IRL to publish key
-                    achievements from IBPE activities, contributions to the IBPE
-                    Annual Academic Meeting, and review articles or academic
-                    notes authored by IBPE members. We hope this initiative
-                    inspires new members and provides guidance for their
-                    research endeavors.
-                  </p>
-                </div>
-              </div>
-            </article>
-            <article class="col-4 col-12-mobile special">
-              <br />
-              <a href="/images/IBPE-intro.jpeg" class="image fit">
-                <img src="/images/IBPE-intro-small.jpeg" alt="" />
-              </a>
-            </article>
-          </div>
-        </section>
-      </div>
-
-      <!-- Main -->
-      <div class="wrapper style1">
-        <div class="container">
-          <article id="main" class="special">
-            <header>
-              <h2><a href="#">No Sidebar</a></h2>
-              <p>Morbi convallis lectus malesuada sed fermentum dolore amet</p>
-            </header>
-            <a href="#" class="image featured"
-              ><img src="/images/pic06.jpg" alt=""
-            /></a>
-            <p>
-              Commodo id natoque malesuada sollicitudin elit suscipit. Curae
-              suspendisse mauris posuere accumsan massa posuere lacus convallis
-              tellus interdum. Amet nullam fringilla nibh nulla convallis ut
-              venenatis purus lobortis. Auctor etiam porttitor phasellus tempus
-              cubilia ultrices tempor sagittis. Nisl fermentum consequat integer
-              interdum integer purus sapien. Nibh eleifend nulla nascetur
-              pharetra commodo mi augue interdum tellus. Ornare cursus augue
-              feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-              natoque aenean scelerisque vel lacinia mollis quam sodales congue.
-            </p>
-            <section>
-              <header>
-                <h3>Ultrices tempor sagittis nisl</h3>
-              </header>
-              <p>
-                Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus
-                ultrices porttitor sollicitudin imperdiet at pretium tellus in
-                euismod a integer sodales neque. Nibh quis dui quis mattis eget
-                imperdiet venenatis feugiat. Neque primis ligula cum erat aenean
-                tristique luctus risus ipsum praesent iaculis. Fermentum elit
-                fringilla consequat dis arcu. Pellentesque mus tempor vitae
-                pretium sodales porttitor lacus. Phasellus egestas odio nisl
-                duis sociis purus faucibus morbi. Eget massa mus etiam sociis
-                pharetra magna.
-              </p>
-              <p>
-                Eleifend auctor turpis magnis sed porta nisl pretium. Aenean
-                suspendisse nulla eget sed etiam parturient orci cursus nibh.
-                Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim
-                cras rutrum consectetur ut penatibus fermentum nibh erat
-                malesuada varius.
-              </p>
             </section>
             <section>
               <header>
-                <h3>Augue euismod feugiat tempus</h3>
+                <h3>Chief editor of IRL (2020)</h3>
               </header>
+              <a href="/images/IBPE-intro.jpeg" class="image fit">
+                <img src="/images/IBPE-intro-small.jpeg" alt="" />
+              </a>
               <p>
-                Pretium tellus in euismod a integer sodales neque. Nibh quis dui
-                quis mattis eget imperdiet venenatis feugiat. Neque primis
-                ligula cum erat aenean tristique luctus risus ipsum praesent
-                iaculis. Fermentum elit ut nunc urna volutpat donec cubilia
-                commodo risus morbi. Lobortis vestibulum velit malesuada ante
-                egestas odio nisl duis sociis purus faucibus morbi. Eget massa
-                mus etiam sociis pharetra magna.
+                This is the inaugural issue of
+                <strong>IBPE Review Letters (IRL)</strong>, a journal my
+                teammates and I established to preserve and share the
+                intellectual output of IBPE members. While IBPE is known for its
+                numerous reading and exploratory activities, many brilliant
+                outcomes from past projects were unfortunately left
+                undocumented, leading to the loss of valuable insights over
+                time. To address this, we created IRL to publish key
+                achievements from IBPE activities, contributions to the IBPE
+                Annual Academic Meeting, and review articles or academic notes
+                authored by IBPE members. We hope this initiative inspires new
+                members and provides guidance for their research endeavors.
               </p>
             </section>
           </article>
