--- a/notes/index.html
+++ b/notes/index.html
@@ -205,7 +205,7 @@
                 <section id="imperial">
                   <header>
                     <h3>
-                      <a href="#imperial" class="scrolly" style="color: #ef8376"
+                      <a href="#imperial" class="scrolly"
                         >Imperial College London</a
                       >
                     </h3>
@@ -360,17 +360,11 @@
                 <section id="hust">
                   <header>
                     <h3>
-                      <a href="#hust" class="scrolly" style="color: #ef8376">
+                      <a href="#hust" class="scrolly">
                         Huazhong University of Science and Technology</a
                       >
                     </h3>
                   </header>
-                  <p>
-                    This collection includes notes from my undergraduate
-                    studies, primarily written in Chinese. They cover a mix of
-                    topics, ranging from class lectures to self-directed
-                    learning.
-                  </p>
                   <div class="course-card">
                     <div class="course-header">
                       <h4>Mathematical Methods in Physics (Fall 2019)</h4>
@@ -774,9 +768,7 @@
                 <section id="pku">
                   <header>
                     <h3>
-                      <a href="#pku" class="scrolly" style="color: #ef8376"
-                        >Peking University</a
-                      >
+                      <a href="#pku" class="scrolly">Peking University</a>
                     </h3>
                   </header>
                   <section id="pku-quantum-mechanics">
@@ -848,9 +840,7 @@
                 <section id="others">
                   <header>
                     <h3>
-                      <a href="#others" class="scrolly" style="color: #ef8376"
-                        >Self-Study</a
-                      >
+                      <a href="#others" class="scrolly">Self-Study</a>
                     </h3>
                   </header>
                   <div class="course-card">
