--- a/notes/year.html
+++ b/notes/year.html
@@ -112,9 +112,7 @@
                 <section id="2024">
                   <header>
                     <h3>
-                      <a href="#2024" class="scrolly" style="color: #ef8376"
-                        >2024</a
-                      >
+                      <a href="#2024" class="scrolly">2024</a>
                     </h3>
                   </header>
                   <ul>
@@ -156,9 +154,7 @@
                 <section id="2023">
                   <header>
                     <h3>
-                      <a href="#2023" class="scrolly" style="color: #ef8376"
-                        >2023</a
-                      >
+                      <a href="#2023" class="scrolly">2023</a>
                     </h3>
                   </header>
                   <ul>
@@ -216,9 +212,7 @@
                 <section id="2021">
                   <header>
                     <h3>
-                      <a href="#2021" class="scrolly" style="color: #ef8376"
-                        >2021</a
-                      >
+                      <a href="#2021" class="scrolly">2021</a>
                     </h3>
                   </header>
                   <ul>
@@ -294,9 +288,7 @@
                 <section id="2020">
                   <header>
                     <h3>
-                      <a href="#2020" class="scrolly" style="color: #ef8376"
-                        >2020</a
-                      >
+                      <a href="#2020" class="scrolly">2020</a>
                     </h3>
                   </header>
                   <ul>
@@ -487,9 +479,7 @@
                 <section id="2019">
                   <header>
                     <h3>
-                      <a href="#2019" class="scrolly" style="color: #ef8376"
-                        >2019</a
-                      >
+                      <a href="#2019" class="scrolly">2019</a>
                     </h3>
                   </header>
                   <ul>
