--- a/outreach/ibpe.html
+++ b/outreach/ibpe.html
@@ -74,11 +74,9 @@
           <article id="main" class="special">
             <header>
               <h2>
-                <a href="#"
-                  >Innovative Base of Physics Experiments (IBPE), HUST</a
-                >
+                <a href="#">IBPE</a>
               </h2>
-              <p>Morbi convallis lectus malesuada sed fermentum dolore amet</p>
+              <p>Innovative Base of Physics Experiments (IBPE), HUST</p>
             </header>
             <a href="#" class="image featured"
               ><img src="/images/pic06.jpg" alt=""
