--- a/publications.html
+++ b/publications.html
@@ -119,7 +119,10 @@
                     <a href="https://patents.google.com/patent/CN117371547/en"
                       >CN117371547</a
                     ></i
-                  >, Granted 2023.
+                  >, Granted 2024. (<a
+                    href="docs/publications/patent-2023114438010.pdf"
+                    >PDF</a
+                  >)
                 </li>
                 <li>
                   Jingbo Wang and <strong>Chen Huang</strong>, "Ion trap chip
@@ -130,7 +133,10 @@
                     <a href="https://patents.google.com/patent/CN117494829/en"
                       >CN117494829</a
                     ></i
-                  >, Granted 2023.
+                  >, Granted 2024. (<a
+                    href="docs/publications/patent-2023114435900.pdf"
+                    >PDF</a
+                  >)
                 </li>
                 <li>
                   <strong>Chen Huang</strong> and Jingbo Wang, "Ion trap chip
