--- a/notes/index.html
+++ b/notes/index.html
@@ -76,28 +76,16 @@
             <div class="col-4 col-12-mobile" id="sidebar">
               <hr class="first" />
               <section>
-                <h4>
-                  <a href="#imperial" class="scrolly"
-                    >Imperial College London</a
-                  >
-                </h4>
-                <p></p>
-                <h4>
-                  <a href="#hust" class="scrolly"
-                    >Huazhong University of Science and Technology</a
-                  >
-                </h4>
-                <p></p>
-                <h4>
-                  <a href="#pku" class="scrolly">Peking University</a>
-                </h4>
-                <p></p>
-                <h4>
-                  <a href="#others" class="scrolly">Self-Study</a>
-                </h4>
-                <p></p>
-              </section>
-              <br /><br />
+                <section>
+                  <h4><a href="#imperial" class="scrolly active"><i class="fas fa-chevron-right"></i> Imperial College London</a></h4>
+                  <h4><a href="#hust" class="scrolly"><i class="fas fa-chevron-right"></i> Huazhong University of Science and Technology</a></h4>
+                  <h4>
+                    <a href="#pku" class="scrolly"><i class="fas fa-chevron-right"></i> Peking University</a>
+                  </h4>
+                  <h4>
+                    <a href="#others" class="scrolly"><i class="fas fa-chevron-right"></i> Self-Study</a>
+                  </h4>
+                </section>
             </div>
             <div class="col-8 col-12-mobile imp-mobile" id="content">
               <div class="search-container">
