--- a/notes/index.html
+++ b/notes/index.html
@@ -137,7 +137,10 @@
                           >Study Notes: </strong
                         ><a href="/docs/notes/notes-on-quantum-information.pdf"
                           >Quantum Information</a
-                        >
+                        ><br />
+                        <a href="/docs/notes/notes-on-quantum-information.pdf" class="pdf-link">
+                          Quantum Information <i class="fas fa-file-pdf"></i> (2.4MB)
+                        </a>
                       </div>
                     </div>
                   </div>
