--- a/notes/index.html
+++ b/notes/index.html
@@ -102,14 +102,6 @@
                 </div>
               </div>
               <article id="main">
-                <p>
-                  Sorted by &nbsp;
-                  <i class="fas fa-university"></i>&nbsp;<a
-                    href="/notes/index.html"
-                    >University</a
-                  >&nbsp;&nbsp; <i class="fas fa-calendar-check"></i>&nbsp;
-                  <a href="/notes/year.html">Year</a>
-                </p>
                 <section id="imperial">
                   <header>
                     <h3>
@@ -144,7 +136,9 @@
                       </div>
                     </div>
                   </div>
-
+                  <a href="/docs/notes/notes-on-quantum-information.pdf" class="pdf-link">
+                    Quantum Information <i class="fas fa-file-pdf"></i> (2.4MB)
+                  </a>
                   <div class="course-card">
                     <div class="course-header">
                       <h4>Quantum Optics (Fall 2023)</h4>
