--- a/notes/index.html
+++ b/notes/index.html
@@ -131,7 +131,7 @@
                           >Quantum Information</a
                         ><br />
                         <a href="/docs/notes/notes-on-quantum-information.pdf" class="pdf-link">
-                          Quantum Information <i class="fas fa-file-pdf"></i> (2.4MB)
+                          Quantum Information <i class="fas fa-file-pdf"></i> (511KB)
                         </a>
                       </div>
                     </div>
