--- a/notes/index.html
+++ b/notes/index.html
@@ -14,6 +14,7 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="/assets/css/main.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <noscript
       ><link rel="stylesheet" href="/assets/css/noscript.css"
     /></noscript>
