--- a/test.html
+++ b/test.html
@@ -117,55 +117,51 @@
   });
 </script>
 
-
-
 <section class="timeline">
-    <div class="timeline-item">
-      <div class="timeline-point"></div>
-      <div class="timeline-content">
-        <h3>Imperial College London</h3>
-        <div class="timeline-date">2023-2025</div>
-        <p>M.Sc. in Physics with extended research...</p>
-      </div>
-      <div class="timeline-point"></div>
-      <div class="timeline-content">
-        <h3>Huazhong University of Science and Technology</h3>
-        <div class="timeline-date">2023-2025</div>
-        <p>M.Sc. in Physics with extended research...</p>
-      </div>
+  <div class="timeline-item">
+    <div class="timeline-point"></div>
+    <div class="timeline-content">
+      <h3>Imperial College London</h3>
+      <div class="timeline-date">2023-2025</div>
+      <p>M.Sc. in Physics with extended research...</p>
     </div>
-    <!-- 其他时间轴项 -->
-  </style>
-  
+    <div class="timeline-point"></div>
+    <div class="timeline-content">
+      <h3>Huazhong University of Science and Technology</h3>
+      <div class="timeline-date">2023-2025</div>
+      <p>M.Sc. in Physics with extended research...</p>
+    </div>
+  </div>
+
   <style>
     .timeline {
       position: relative;
       padding: 2rem 0;
     }
-  
+
     .timeline-item {
       display: flex;
       margin-bottom: 2rem;
     }
-  
+
     .timeline-point {
       width: 20px;
       height: 20px;
-      background: #4CAF50;
+      background: #4caf50;
       border-radius: 50%;
       position: relative;
       flex-shrink: 0;
       margin-right: 1rem;
     }
-  
+
     .timeline-content {
       flex: 1;
       padding: 1rem;
       background: #f5f5f5;
       border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
-  
+
     .timeline-date {
       color: #666;
       font-size: 0.9em;
@@ -173,24 +169,13 @@
     }
   </style>
 
-
-
-
-<!-- 在侧边栏导航添加视觉反馈 -->
-<section>
-    <h4><a href="#imperial" class="scrolly active"><i class="fas fa-chevron-right"></i> Imperial</a></h4>
-    <h4><a href="#hust" class="scrolly"><i class="fas fa-chevron-right"></i> HUST</a></h4>
-    <!-- 增加跳转指示图标 -->
-  </section>
-  
   <!-- 为PDF链接添加明显标识 -->
   <a href="/docs/notes/notes-on-quantum-information.pdf" class="pdf-link">
     Quantum Information <i class="fas fa-file-pdf"></i> (2.4MB)
   </a>
-  
 
   <!-- 改为卡片式布局 -->
-<div class="course-card">
+  <div class="course-card">
     <div class="course-header">
       <h4>Quantum Information (Fall 2023)</h4>
       <div class="course-meta">
@@ -201,32 +186,36 @@
     <div class="course-body">
       <p>Taught by Prof. Myungshik Kim...</p>
       <div class="resource-links">
-        <a href="..." class="button small"><i class="fas fa-book"></i> Study Notes</a>
-        <a href="..." class="button small"><i class="fas fa-star"></i> Review Notes</a>
+        <a href="..." class="button small"
+          ><i class="fas fa-book"></i> Study Notes</a
+        >
+        <a href="..." class="button small"
+          ><i class="fas fa-star"></i> Review Notes</a
+        >
       </div>
     </div>
   </div>
-  
+
   <style>
-  /* 卡片式布局样式 */
-  .course-card {
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    margin-bottom: 1.5rem;
-    padding: 1.5rem;
-  }
-  .course-header {
-    border-bottom: 1px solid #eee;
-    padding-bottom: 0.5rem;
-    margin-bottom: 1rem;
-  }
-  .pill {
-    background: #f0f0f0;
-    border-radius: 15px;
-    padding: 2px 8px;
-    font-size: 0.8em;
-    margin-left: 8px;
-  }
+    /* 卡片式布局样式 */
+    .course-card {
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      margin-bottom: 1.5rem;
+      padding: 1.5rem;
+    }
+    .course-header {
+      border-bottom: 1px solid #eee;
+      padding-bottom: 0.5rem;
+      margin-bottom: 1rem;
+    }
+    .pill {
+      background: #f0f0f0;
+      border-radius: 15px;
+      padding: 2px 8px;
+      font-size: 0.8em;
+      margin-left: 8px;
+    }
   </style>
-  
+</section>
