--- a/index.html
+++ b/index.html
@@ -306,21 +306,21 @@
                 </header>
                 <section class="timeline">
                   <div class="timeline-item">
-                    <div class="timeline-point"></div>
                     <div class="timeline-content">
                       <h3>Imperial College London</h3>
                       <div class="timeline-date">
-                        Sep. 2023 - Jun. 2025 (Expected)
+                        <i>Sep. 2023 - Jun. 2025 (Expected)</i>
                       </div>
                       <p>
                         M.Sc. in Physics with extended research, advised by Dr.
                         John Michniewicz
                       </p>
                     </div>
-                    <div class="timeline-point"></div>
                     <div class="timeline-content">
                       <h3>Huazhong University of Science and Technology</h3>
-                      <div class="timeline-date">Sep. 2018 - Jun. 2022</div>
+                      <div class="timeline-date">
+                        <i>Sep. 2018 - Jun. 2022</i>
+                      </div>
                       <p>B.S. in Physics, advised by Prof. Jianming Cai</p>
                     </div>
                   </div>
