--- a/test.html
+++ b/test.html
@@ -175,8 +175,8 @@
   </a>
 
   <!-- 改为卡片式布局 -->
-  <div class="course-card">
-    <div class="course-header">
+  <div class="white-card">
+    <div class="card-header">
       <h4>Quantum Information (Fall 2023)</h4>
       <div class="course-meta">
         <span class="pill">Graduate</span>
@@ -198,14 +198,14 @@
 
   <style>
     /* 卡片式布局样式 */
-    .course-card {
+    .white-card {
       background: white;
       border-radius: 8px;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       margin-bottom: 1.5rem;
       padding: 1.5rem;
     }
-    .course-header {
+    .card-header {
       border-bottom: 1px solid #eee;
       padding-bottom: 0.5rem;
       margin-bottom: 1rem;
