--- a/index.html
+++ b/index.html
@@ -304,18 +304,23 @@
                 <header>
                   <h3>Education</h3>
                 </header>
+                <div class="white-card">
+                  <div class="card-header">
+                    <h4>Imperial College London</h4>
+                  </div>
+                  <div class="course-body">
+                    <p>
+                      <i>Sep. 2023 - Jun. 2025 (Expected)</i>
+                    </p>
+                    <p>
+                      M.Sc. in Physics with extended research, advised by Dr.
+                      John Michniewicz
+                    </p>
+                  </div>
+                </div>
+
                 <section class="timeline">
                   <div class="timeline-item">
-                    <div class="timeline-content">
-                      <h3>Imperial College London</h3>
-                      <div class="timeline-date">
-                        <i>Sep. 2023 - Jun. 2025 (Expected)</i>
-                      </div>
-                      <p>
-                        M.Sc. in Physics with extended research, advised by Dr.
-                        John Michniewicz
-                      </p>
-                    </div>
                     <div class="timeline-content">
                       <h3>Huazhong University of Science and Technology</h3>
                       <div class="timeline-date">
