--- a/index.html
+++ b/index.html
@@ -308,15 +308,13 @@
                   <div class="card-header">
                     <h4>Imperial College London</h4>
                   </div>
-                  <div class="course-body">
-                    <p>
-                      <i>Sep. 2023 - Jun. 2025 (Expected)</i>
-                    </p>
-                    <p>
-                      M.Sc. in Physics with extended research, advised by Dr.
-                      John Michniewicz
-                    </p>
-                  </div>
+                  <p>
+                    <i>Sep. 2023 - Jun. 2025 (Expected)</i>
+                  </p>
+                  <p>
+                    M.Sc. in Physics with extended research, advised by Dr. John
+                    Michniewicz
+                  </p>
                 </div>
 
                 <section class="timeline">
