--- a/notes/index.html
+++ b/notes/index.html
@@ -110,8 +110,8 @@
                       >
                     </h3>
                   </header>
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Quantum Information (Fall 2023)</h4>
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
@@ -133,8 +133,8 @@
                       </div>
                     </div>
                   </div>
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Quantum Optics (Fall 2023)</h4>
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
@@ -153,8 +153,8 @@
                     </div>
                   </div>
 
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Mathematical Methods for Physicists (Fall 2023)</h4>
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
@@ -179,8 +179,8 @@
                     </div>
                   </div>
 
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Advanced Classical Mechanics (Fall 2023)</h4>
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
@@ -200,8 +200,8 @@
                     </div>
                   </div>
 
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Quantum Theory of Matter (Spring 2024)</h4>
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
@@ -221,8 +221,8 @@
                     </div>
                   </div>
 
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Laser Technology (Spring 2024)</h4>
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
@@ -264,8 +264,8 @@
                       >
                     </h3>
                   </header>
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Mathematical Methods in Physics (Fall 2019)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
@@ -298,8 +298,8 @@
                     </div>
                   </div>
 
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Theoretical Mechanics (Fall 2019)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
@@ -325,8 +325,8 @@
                     </div>
                   </div>
 
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Electromagnetics (Fall 2019)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
@@ -349,8 +349,8 @@
                     </div>
                   </div>
 
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Optics (Spring 2020)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
@@ -398,8 +398,8 @@
                     </div>
                   </div>
 
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Analogue Electronics (Spring 2020)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
@@ -439,8 +439,8 @@
                     </div>
                   </div>
 
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Quantum Mechanics (Fall 2020)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
@@ -475,8 +475,8 @@
                     </div>
                   </div>
 
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Electrodynamics (Fall 2020)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
@@ -496,8 +496,8 @@
                     </div>
                   </div>
 
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Advanced Quantum Mechanics (Fall 2020)</h4>
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
@@ -517,8 +517,8 @@
                     </div>
                   </div>
 
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Digital Electronics (Fall 2020)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
@@ -562,8 +562,8 @@
                     </div>
                   </div>
 
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>
                         Thermodynamics and Statistical Physics (Spring 2021)
                       </h4>
@@ -594,8 +594,8 @@
                     </div>
                   </div>
 
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Solid State Physics (Spring 2021)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
@@ -615,8 +615,8 @@
                     </div>
                   </div>
 
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Quantum Optics (Fall 2021)</h4>
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
@@ -643,8 +643,8 @@
                     </div>
                   </div>
 
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Introduction to Plasma Physics (Fall 2021)</h4>
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
@@ -671,8 +671,8 @@
                     </h3>
                   </header>
                   <section id="pku-quantum-mechanics">
-                    <div class="white-card">
-                      <div class="card-header">
+                    <div class="course-card">
+                      <div class="course-header">
                         <h4>Quantum Mechanics II (Summer 2020)</h4>
                         <div class="course-meta">
                           <span class="pill">Graduate</span>
@@ -742,8 +742,8 @@
                       <a href="#others" class="scrolly">Self-Study</a>
                     </h3>
                   </header>
-                  <div class="white-card">
-                    <div class="card-header">
+                  <div class="course-card">
+                    <div class="course-header">
                       <h4>Physics GRE (Fall 2021)</h4>
                       <div class="course-meta">
                         <span class="pill">Self-Study</span>
