--- a/index.html
+++ b/index.html
@@ -128,11 +128,26 @@
                       style="width: 80%; border-radius: 50%"
                   /></a>
                 </div>
-                <header style="text-align: center">
-                  <h3>Chen Huang</h3>
-                  (<a onclick="document.getElementById('name-audio').play();"
-                    >Click to hear the pronunciation</a
-                  >)
+                <header class="profile-header">
+                  <h3 class="name-title">Chen Huang</h3>
+                  <div class="pronunciation-wrap">
+                    <button
+                      class="pronunciation-btn"
+                      onclick="document.getElementById('name-audio').play();"
+                    >
+                      <svg
+                        class="speaker-icon"
+                        viewBox="0 0 24 24"
+                        aria-hidden="true"
+                      >
+                        <path
+                          d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
+                        />
+                      </svg>
+                      <span class="pronunciation-text">Name Pronunciation</span>
+                    </button>
+                    <span class="loading-indicator" aria-hidden="true"></span>
+                  </div>
                 </header>
                 <p>
                   My given name is <strong>Chen</strong>, which means "dawn" or
@@ -304,8 +319,8 @@
                 <header>
                   <h3>Education</h3>
                 </header>
-                <div class="white-card">
-                  <div class="card-header">
+                <div class="course-card">
+                  <div class="course-header">
                     <h4>Imperial College London</h4>
                   </div>
                   <p>
