--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1><a href="#main" class="scrolly">Chen Huang (黄晨)</a></h1>
+            <h1>
+              <a href="#main" class="scrolly"
+                ><strong>Chen Huang</strong> (黄晨)</a
+              >
+            </h1>
             <br /><br />
             <ul class="icons">
               <li>
