--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
         <div class="inner">
           <header>
             <h1>
-              <a href="#main" class="scrolly"
-                ><strong>Chen Huang</strong> (黄晨)</a
-              >
+              <a href="#main" class="scrolly">Chen Huang (黄晨)</a>
             </h1>
             <br /><br />
             <ul class="icons">
