--- a/index.html
+++ b/index.html
@@ -321,30 +321,19 @@
                 <header>
                   <h3>Education</h3>
                 </header>
-                <div class="course-card">
-                  <div class="course-header">
-                    <h4>Imperial College London</h4>
-                  </div>
-                  <p>
-                    <i>Sep. 2023 - Jun. 2025 (Expected)</i>
-                  </p>
-                  <p>
-                    M.Sc. in Physics with extended research, advised by Dr. John
-                    Michniewicz
-                  </p>
+                <div class="education-entry">
+                  <h4>Imperial College London</h4>
+                  <p class="date"><i>Sep. 2023 - Jun. 2025 (Expected)</i></p>
+                  <p>M.Sc. in Physics with Extended Research</p>
+                  <p>Advisor: Dr. John Michniewicz</p>
                 </div>
 
-                <section class="timeline">
-                  <div class="timeline-item">
-                    <div class="timeline-content">
-                      <h3>Huazhong University of Science and Technology</h3>
-                      <div class="timeline-date">
-                        <i>Sep. 2018 - Jun. 2022</i>
-                      </div>
-                      <p>B.S. in Physics, advised by Prof. Jianming Cai</p>
-                    </div>
-                  </div>
-                </section>
+                <div class="education-entry">
+                  <h4>Huazhong University of Science and Technology</h4>
+                  <p class="date"><i>Sep. 2018 - Jun. 2022</i></p>
+                  <p>B.S. in Physics</p>
+                  <p>Advisor: Prof. Jianming Cai</p>
+                </div>
               </section>
 
               <section id="research">
