--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div id="main" class="wrapper style1">
         <div class="row gtr-200">
           <div class="col-3 col-12-mobile">
-            <a class="image fit centered"
+            <a class="image fit right"
               ><img
                 src="/images/photo.jpg"
                 alt=""
