--- a/index.html
+++ b/index.html
@@ -111,43 +111,45 @@
 
       <!-- Main -->
       <div id="main" class="wrapper style1">
-        <div class="row gtr-200">
-          <div class="col-3 col-12-mobile">
-            <a class="image fit right"
-              ><img
-                src="/images/photo.jpg"
-                alt=""
-                style="width: 60%; border-radius: 50%"
-            /></a>
-          </div>
-          <div class="col-9 col-12-mobile imp-mobile" id="content">
-            <header>
-              <h2>
-                👋 Hi, I'm <strong>Chen</strong>
-                <div class="pronunciation-wrap">
-                  <button
-                    class="pronunciation-btn"
-                    onclick="document.getElementById('name-audio').play();"
-                  >
-                    <svg
-                      class="speaker-icon"
-                      viewBox="0 0 24 24"
-                      aria-hidden="true"
+        <div class="container">
+          <div class="row gtr-200">
+            <div class="col-3 col-12-mobile">
+              <a class="image fit right"
+                ><img
+                  src="/images/photo.jpg"
+                  alt=""
+                  style="width: 60%; border-radius: 50%"
+              /></a>
+            </div>
+            <div class="col-9 col-12-mobile imp-mobile" id="content">
+              <header>
+                <h2>
+                  👋 Hi, I'm <strong>Chen</strong>
+                  <div class="pronunciation-wrap">
+                    <button
+                      class="pronunciation-btn"
+                      onclick="document.getElementById('name-audio').play();"
                     >
-                      <path
-                        d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
-                      />
-                    </svg>
-                    <span class="pronunciation-text">Name Pronunciation</span>
-                  </button>
-                  <span class="loading-indicator" aria-hidden="true"></span>
-                </div>
-              </h2>
-              <p>
-                a passionate physics student exploring the
-                <strong>quantum world</strong>.
-              </p>
-            </header>
+                      <svg
+                        class="speaker-icon"
+                        viewBox="0 0 24 24"
+                        aria-hidden="true"
+                      >
+                        <path
+                          d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
+                        />
+                      </svg>
+                      <span class="pronunciation-text">Name Pronunciation</span>
+                    </button>
+                    <span class="loading-indicator" aria-hidden="true"></span>
+                  </div>
+                </h2>
+                <p>
+                  a passionate physics student exploring the
+                  <strong>quantum world</strong>.
+                </p>
+              </header>
+            </div>
           </div>
         </div>
       </div>
