--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="container">
           <div class="row gtr-200">
             <div class="col-3 col-12-mobile">
-              <a class="image fit right"
+              <a class="image fit centered"
                 ><img
                   src="/images/photo.jpg"
                   alt=""
