--- a/index.html
+++ b/index.html
@@ -154,6 +154,40 @@
         </div>
       </div>
 
+      <!-- Main -->
+      <div class="wrapper style1">
+        <div class="container">
+          <article id="main" class="special">
+            <p>
+              My given name is <strong>Chen</strong>, which means "dawn" or
+              "early morning" in Chinese. This meaning suits me well, as I am a
+              morning person who enjoys the calm and peacefulness of the early
+              hours. Interestingly, "Chen" sounds similar to "Cheng", the
+              Chinese word for "orange". Because of this playful resemblance, my
+              friends affectionately call me "Cheng-Zi", which translates to
+              "orange".
+            </p>
+            <p>
+              My surname is <strong>Huang</strong>, which means "yellow" in
+              Chinese. This name has deep historical and cultural roots. It is
+              often associated with the
+              <a href="https://en.wikipedia.org/wiki/Yellow_Emperor"
+                >Yellow Emperor</a
+              >, a legendary figure considered one of the founding ancestors of
+              Chinese civilization.
+            </p>
+            <p>
+              I am always on the lookout for opportunities to expand my
+              knowledge and skills. I'm eager to connect with like-minded
+              individuals and organizations whether through collaborative
+              projects, internships, or further academic research. If you're
+              interested in my research or potential collaboration, please feel
+              free to reach out!
+            </p>
+          </article>
+        </div>
+      </div>
+
       <div id="main" class="wrapper style1">
         <div class="row gtr-200">
           <div class="col-4 col-12-mobile">
